# vlasiator

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .vimrc  Alfven.ll  Alfven.s  BUILD_LINUX_STEPS.txt  CITATION.cff  COPYING  Diffusion.ll  Diffusion.s  Dispersion.ll  Dispersion.s  Distributions.ll  Distributions.s  Doxyfile  Doxyfile.template  Firehose.ll  Firehose.s  Flowthrough.ll  Flowthrough.s  Fluctuations.ll  Fluctuations.s  Harris.ll  Harris.s  INSTALL  KHB.ll  KHB.s  Larmor.ll  Larmor.s  Makefile  Makefile.gnu  Makefile.in  Makefile.inc  Makefile.intel  Makefile.jugene  Makefile.meteo  Makefile.pgi  MakefileCUDA  (+1060 more)
MAKE/: Makefile.Cooler  Makefile.Cooler_cuda  Makefile.Freezer  Makefile.Freezer_cuda  Makefile.MN5_app  Makefile.MN5_gpp  Makefile.NOMAD  Makefile.Talgat  Makefile.Talgat_mahti  Makefile.Talgat_pgi  Makefile.abel_gcc  Makefile.appa  Makefile.appleM1  Makefile.arriesgado  Makefile.arto  Makefile.bsc_jetsontx  Makefile.c2a_xlc  Makefile.carrington_gcc_openmpi  Makefile.carrington_gcc_openmpi_ohpc  Makefile.cubbli20  Makefile.docker  Makefile.fermi  Makefile.fermi_gcc  Makefile.fermi_xlc  Makefile.frankenstein_hopper2_cuda  Makefile.github_actions  Makefile.github_actions_arm64  Makefile.harakka_vdf_compression  Makefile.hawk_gcc_mpt  Makefile.hawk_gcc_openmpi  Makefile.hawk_intel_mpt  Makefile.hawk_intel_openmpi  Makefile.hermit  Makefile.hermit_cray  Makefile.hermit_gcc  Makefile.hermit_intel  Makefile.hile_cpu  Makefile.hile_gpu  Makefile.home  Makefile.horakons  (+65 more)
arch/: arch_device_api.h  arch_device_cuda.h  arch_device_hip.h  arch_device_host.h  arch_sysboundary.h  arch_sysboundary_api.h  arch_sysboundary_cuda.h  arch_sysboundary_host.h  gpu_base.cpp  gpu_base.hpp  unit_testing.cpp  unit_testing_fields.cpp
backgroundfield/: B0.cpp  B0.hpp  backgroundfield.cpp  backgroundfield.h  constantfield.cpp  constantfield.hpp  dipole.cpp  dipole.hpp  fieldfunction.hpp  functions.hpp  integratefieldfunction.cpp  integratefunction.cpp  integratefunction.hpp  linedipole.cpp  linedipole.hpp  ode.cpp  ode.hpp  quadr.cpp  quadr.hpp  vectorRdipole.cpp_unused  vectordipole.cpp  vectordipole.hpp
cpu/: Makefile  cpu_acc.h  cpu_acc_cweno3.cpp  cpu_acc_cweno3.h  cpu_acc_kt.cpp  cpu_acc_kt.h  cpu_acc_leveque.cpp  cpu_acc_leveque.h  cpu_acc_leveque.new  cpu_acc_leveque.old  cpu_acc_ppm.cpp  cpu_acc_ppm.h  cpu_acc_semilag.hpp  cpu_common.h  cpu_trans.cpp  cpu_trans.h  cpu_trans_kt.cpp  cpu_trans_kt.h  cpu_trans_leveque.h  leveque_common.h  memalloc.cpp  vlasovmover_kt.cpp  vlasovmover_leveque.cpp  vlasovmover_leveque_multiple.cpp
cuda/: Makefile  cuda_acc.cu  cuda_acc_leveque.cu  cuda_common.cu  cuda_common.cuh  cuda_trans.cu  cuda_trans_leveque.cu  cudafuncs.cpp  cudafuncs.h  cudalaunch.h  devicegrid.cpp  devicegrid.h  eventcontainer.cpp  eventcontainer.h  memalloc.cpp  streampool.cpp  streampool.h  vlasovmover.cu
d/: MultiPeak.cpp  project.cpp
datareduction/: datareducer.cpp  datareducer.h  datareductionoperator.cpp  datareductionoperator.h  dro_populations.cpp  dro_populations.h  dro_species_moments.cpp  dro_species_moments.h  reducepopulation.cpp  reducepopulation.h  reducepopulation.tex  variable_dictionary.h
doc/: Lorentz_force.tex  communications.txt  dccrg_restart_format.txt  make_documentation.sh  sparse_todo.txt  usermanual.dox  vlasiator.dox  vlsv_format.txt
doxytmp/: Doxyfile
fieldsolver/: Makefile  derivatives.cpp  derivatives.hpp  fs_cache.cpp  fs_cache.h  fs_common.cpp  fs_common.h  fs_limiters.cpp  fs_limiters.h  gridGlue.cpp  gridGlue.hpp  ldz_electric_field.cpp  ldz_electric_field.hpp  ldz_gradpe.cpp  ldz_gradpe.hpp  ldz_hall.cpp  ldz_hall.hpp  ldz_hyper.cpp  ldz_hyper.hpp  ldz_magnetic_field.cpp  ldz_magnetic_field.hpp  ldz_main.cpp  ldz_volume.cpp  ldz_volume.hpp  limiters.h  londrillo_delzanna.cpp  unit_tests.cpp
fieldtracing/: bulirschStoer.cpp  bulirschStoer.h  dormandPrince.cpp  dormandPrince.h  euler.cpp  euler.h  eulerAdaptive.cpp  eulerAdaptive.h  fieldtracing.cpp  fieldtracing.h
gridbuilders/: Makefile  asciibuilder.cpp  asciibuilder.h  asciireaders.h  mpibuilder.cpp  mpibuilder.h  rect_cuboid_builder.cpp  rect_cuboid_builder.h  restartbuilder.cpp  restartbuilder.h  vlasov.grid
ionosphere_gpu_solver/: Makefile  init_testing_session.sh  ionosphere_solver.cu  load_modules.sh  main.cpp  readme.md  test  todo
ionosphere_gpu_solver/testing/: Makefile  generate_matrix.py  ionosphere_gpu_testing  load_testing_modules  main.cpp  meson.build
ionosphere_gpu_solver/testing/.build/: main.d
ionosphere_gpu_solver/testing/include/: benchmark.hpp  timer.hpp  tools.hpp
ionosphere_gpu_solver/testing/src/: main.cpp
ionosphere_gpu_solver/testing/tests/: .gitignore  create_sparse_matrix_1.cpp  create_sparse_matrix_2.cpp  create_sparse_matrix_3.cpp  create_tests_from_prototypes.sh  matrix_vector_product_cuda_1.cpp  meson.build  muliply_vector_with_scalar_and_add_it_to_another_vector_1.cpp  sparse_BiGCSTAB_1.cpp  sparse_BiGCSTAB_2.cpp  sparse_BiGC_1.cpp  sparse_BiGC_2.cpp  sparse_matrix_vector_product_cuda_1.cpp  sparse_matrix_vector_product_cuda_2.cpp  transpose_matrix_1.cpp  vector_addition_1.cpp  vector_dot_product_1.cpp  vector_elementwise_division_1.cpp  vector_elementwise_multiplication_1.cpp  vector_norm_1.cpp  vector_norm_squared_1.cpp  vector_norm_squared_2.cpp  vector_subtraction_1.cpp
ionosphere_gpu_solver/testing/tests/prototypes/: create_sparse_matrix_1.cpp  create_sparse_matrix_2.cpp  create_sparse_matrix_3.cpp  matrix_vector_product_cuda_1.cpp  muliply_vector_with_scalar_and_add_it_to_another_vector_1.cpp  sparse_BiGCSTAB_1.cpp  sparse_BiGCSTAB_2.cpp  sparse_BiGC_1.cpp  sparse_BiGC_2.cpp  sparse_matrix_vector_product_cuda_1.cpp  sparse_matrix_vector_product_cuda_2.cpp  transpose_matrix_1.cpp  vector_addition_1.cpp  vector_dot_product_1.cpp  vector_elementwise_division_1.cpp  vector_elementwise_multiplication_1.cpp  vector_norm_squared_1.cpp  vector_norm_squared_2.cpp  vector_subtraction_1.cpp
modules/: MN5_app.sh  carrington_gcc_openmpi.sh  hile_cpu.sh  hile_gpu.sh  karolina_cuda.sh  karolina_gcc.sh  meluxina.sh  (+8 more)
(+7899 files in other folders)
